--- a/Citoyen/templates/citizens/edit_profile.html
+++ b/Citoyen/templates/citizens/edit_profile.html
@@ -37,19 +37,17 @@
                 </div>
             {% endfor %}
 
-             {# Optional: Add fields to edit User model data (like email) if needed
-                You would typically use a different form (e.g., UserChangeForm)
-                and pass it in the context as 'user_form'.
+            
 
-                <hr class="my-6 border-gray-200">
+                <!-- <hr class="my-6 border-gray-200">
                 <h3 class="text-lg font-medium text-gray-800 border-b pb-2 border-gray-200">Informations du Compte</h3>
 
                  <div>
                     <label for="{{ user_form.email.id_for_label }}" class="form-label">{{ user_form.email.label }}</label>
                     {{ user_form.email }}
                     {% if user_form.email.errors %}<p class="text-red-500 text-xs italic mt-1">{{ user_form.email.errors.as_text }}</p>{% endif %}
-                </div>
-             #}
+                </div> -->
+            
 
 
             <div class="pt-5 border-t border-gray-200 flex justify-end">
