--- a/Muni_admin/templates/muni_admin/base.html
+++ b/Muni_admin/templates/muni_admin/base.html
@@ -445,7 +445,7 @@
                         © {% now "Y" %} Belediyti. Tous droits réservés.
                     </div>
                     <div class="text-sm text-secondary-500 sm:ml-4 sm:mt-0 mt-2">
-                        Made with <i class="fas fa-heart text-danger-500"></i> By FST students
+                        Made with <i class="fas fa-heart text-danger-500"></i>
                     </div>
                 </div>
             </footer>
