--- a/Citoyen/templates/citizens/login.html
+++ b/Citoyen/templates/citizens/login.html
@@ -14,7 +14,7 @@
         <div class="text-center">
             <div class="relative mx-auto h-16 w-16 overflow-hidden rounded-full bg-gradient-to-r from-blue-500 to-emerald-400 p-2 shadow-md transition-transform duration-300 hover:scale-105" data-aos="fade-down" data-aos-delay="200">
                 {# Ensure image path is correct #}
-                <img class="h-8 w-auto" style="max-width: 200px;" src="{% static 'logo.svg' %}" alt="Belediyti Logo">
+                <img class="h-8 w-auto" style="width: 400px;" src="{% static 'belediyeti.png' %}" alt="Belediyti Logo">
             </div>
             <h2 class="mt-6 text-center text-3xl font-bold tracking-tight text-gray-900" data-aos="fade-up" data-aos-delay="300">
                 Connectez-vous à votre compte
