--- a/Muni_admin/templates/muni_admin/base.html
+++ b/Muni_admin/templates/muni_admin/base.html
@@ -665,8 +665,8 @@
             <!-- Logo Section -->
             <div class="logo-section">
                 <div class="logo-content">
-                    <div class="logo-icon">
-                        <i class="fas fa-city"></i>
+                    <div class="logo-icon" style="color: white; background-color: white;">
+                        <img class="h-8 w-auto" style="width: 400px;" src="{% static 'belediyeti.png' %}" alt="Belediyti Logo">
                     </div>
                     <div class="logo-text">
                         <div class="logo-title">Belediyti</div>
