--- a/Citoyen/templates/citizens/register.html
+++ b/Citoyen/templates/citizens/register.html
@@ -11,7 +11,7 @@
         data-aos-delay="100"
     >
         <div>
-            <img class="h-8 w-auto mx-auto" style="max-width: 200px;" src="{% static 'logo.svg' %}" alt="Belediyti Logo">
+            <img class="h-8 w-auto mx-auto" style="max-width: 200px;" src="{% static 'belediyeti.png' %}" alt="Belediyti Logo">
             <h2 class="mt-6 text-center text-3xl font-bold tracking-tight text-gray-900">
                 Créer votre compte citoyen
             </h2>
