--- a/Citoyen/templates/components/navbar.html
+++ b/Citoyen/templates/components/navbar.html
@@ -19,7 +19,7 @@
                 <div class="flex-shrink-0 flex items-center">
                      <a href="{% url 'citizen_dashboard' %}" class="flex items-center space-x-2">
                         {# Ensure image exists and path is correct #}
-                        {# <img class="h-8 w-auto" src="{% static 'logo.svg' %}" alt="Belediyti Logo" width="100px"> #}
+                        {# <img class="h-8 w-auto" src="{% static 'belediyeti.png' %}" alt="Belediyti Logo" width="100px"> #}
                          {# Placeholder SVG if no image #}
                          <svg class="h-8 w-8 text-blue-600" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M10 3a1 1 0 00-1 1v1a1 1 0 002 0V4a1 1 0 00-1-1zM5.293 6.707a1 1 0 011.414-1.414L8 6.586l1.293-1.293a1 1 0 111.414 1.414L9.414 8l1.293 1.293a1 1 0 01-1.414 1.414L8 9.414l-1.293 1.293a1 1 0 01-1.414-1.414L6.586 8 5.293 6.707zM15 10a1 1 0 011-1h1a1 1 0 110 2h-1a1 1 0 01-1-1zm-8 6a1 1 0 100-2 1 1 0 000 2zm6-1a1 1 0 11-2 0 1 1 0 012 0zM4 10a1 1 0 011-1h1a1 1 0 110 2H5a1 1 0 01-1-1z" clip-rule="evenodd"></path></svg>
                          <span class="hidden sm:inline text-xl font-bold text-gray-800">Belediyti</span>
