--- a/Citoyen/templates/components/sidebar.html
+++ b/Citoyen/templates/components/sidebar.html
@@ -32,7 +32,7 @@
 
         <!-- Logo -->
         <div class="flex-shrink-0 flex items-center px-4">
-            <img class="h-8 w-auto" style="max-width: 110px;" src="{% static 'logo.svg' %}" alt="Belediyti Logo">
+            <img class="h-8 w-auto" style="max-width: 110px;" src="{% static 'belediyeti.png' %}" alt="Belediyti Logo">
             <span class="ml-2 text-xl font-bold text-gray-800">Belediyti</span>
         </div>
         <!-- Navigation -->
@@ -80,7 +80,7 @@
         <div class="flex flex-col flex-grow bg-white pt-5 pb-4 overflow-y-auto shadow-md border-r border-gray-200">
             <!-- Logo -->
             <div class="flex items-center flex-shrink-0 px-4">
-                <img class="h-8 w-auto" style="max-width: 110px;" src="{% static 'logo.svg' %}" alt="Belediyti Logo">
+                <img class="h-8 w-auto" style="max-width: 110px;" src="{% static 'belediyeti.png' %}" alt="Belediyti Logo">
                 <span class="ml-2 text-xl font-bold text-gray-800">Belediyti</span>
             </div>
              <!-- Navigation -->
